# arm-m0-memcpy

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  clean.bat  main.cpp  memcpy_benchmark.c  memcpy_benchmark.h
doc/results/: Cycles per copy loop.xlsx  Diff RAM-ROM.xlsx  Memcpy_FLASH-CHACHED.txt  Memcpy_FLASH-CHACHED.xlsx  Memcpy_FLASH-UNCHACHED.txt  Memcpy_FLASH-UNCHACHED.xlsx  Memcpy_RAM.txt  Memcpy_RAM.xlsx  Memcpy_ROM.txt  Mid size threshold.xlsx
lib/: CMakeLists.txt  Readme.md
lib/memops_opt/test/: CMakeLists.txt  README.md  cleanresults.bat  generate-cases-includes.py  generate.bat  memcpy_armv6m_test.S  test-memcpy.c  test-memcpy.h
